--- a/index.html
+++ b/index.html
@@ -162,6 +162,13 @@
                 moon3.style.width = "30%";
                 moon4.style.width = "30%";
                 context.style.fontSize = "26px";
+            }
+            else if (width < 376) {
+                moon1.style.width = "10%";
+                moon2.style.width = "10%";
+                moon3.style.width = "10%";
+                moon4.style.width = "10%";
+                context.style.fontSize = "26px";
             } else {
                 moon1.style.width = "300px";
                 moon2.style.width = "300px";
